[package]
name = "calcit_std"
version = "0.1.1"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"


[lib]
name = "calcit_std"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4.24"
cirru_edn = "0.4.0"
cirru_parser = "0.1.24"
nanoid = "0.4.0"
rand = "0.8.5"
ctrlc = "3.3.1"
md5 = "0.7.0"
walkdir = "2.3.3"
glob = "0.3.0"

# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = "z"  # Optimize for size.
